# DPF_Tests

./: .gitignore  CMakeLists.txt  Makefile  README.md
plugins/AITest/: AITest.cpp  AITest.hpp  AITestParams.h  AITestUI.cpp  AITestUI.hpp  CMakeLists.txt  DistrhoPluginInfo.h  Makefile  font.cpp  lv2_ttl_generator  model.cpp
plugins/AITest/models/: beat_model_5x16.cpp  grid_embedder_2d.cpp
plugins/AITest/widgets/: BeatGrid.cpp  BeatGrid.hpp  HBox.cpp  HBox.hpp  Knob.cpp  Knob.hpp  SimpleButton.cpp  SimpleButton.hpp  Slider.cpp  Slider.hpp  VSlider.cpp  VSlider.hpp  XYSlider.cpp  XYSlider.hpp
plugins/MyAmp/: CMakeLists.txt  DistrhoPluginInfo.h  Makefile  MyAmp.cpp  MyAmpUI.cpp
plugins/SamplePlayer/: CMakeLists.txt  DistrhoPluginInfo.h  Makefile  SamplePlayer.cpp  SamplePlayer.hpp  SamplePlayerParams.h  SamplePlayerUI.cpp  SamplePlayerUI.hpp  SimpleButton.cpp  SimpleButton.hpp
plugins/SamplePlayer/widgets/: HBox.cpp  HBox.hpp  Knob.hpp  SimpleButton.cpp
